[BACKLOG-37059] Provides fixes/improvements for the following: - Burger perspectives sub menu item coloring - Menu item naming for burger UserDropDown - Safely closing open popup menus when entering burger mode - CustomDropDown popup positioning for UserDropDown on window resize - Small comment/spacing/formatting changes

--- a/user-console/src/main/resources/org/pentaho/mantle/public/themes/ruby/mantleRuby.css
+++ b/user-console/src/main/resources/org/pentaho/mantle/public/themes/ruby/mantleRuby.css
@@ -902,12 +902,14 @@ div#customDropdownPopupMajor .gwt-MenuBar-vertical .gwt-MenuItem:hover:not(.gwt-
   color: #000 !important;
 }
 
-.custom-dropdown-popup .gwt-MenuBar-vertical .gwt-MenuItem-disabled {
+.custom-dropdown-popup .gwt-MenuBar-vertical .gwt-MenuItem-disabled,
+.pen-BurgerMenuBarPopup .gwt-MenuBar-vertical .gwt-MenuItem-disabled {
   color: #cccccc;
   cursor: default;
 }
 
-.custom-dropdown-popup .gwt-MenuBar-vertical .gwt-MenuItem-disabled:hover {
+.custom-dropdown-popup .gwt-MenuBar-vertical .gwt-MenuItem-disabled:hover,
+.pen-BurgerMenuBarPopup .gwt-MenuBar-vertical .gwt-MenuItem-disabled:hover {
   background-color: white;
 }
 
